驾驶舱暂存

--- a/ruoyi-admin/src/main/resources/templates/data/data/data.html
+++ b/ruoyi-admin/src/main/resources/templates/data/data/data.html
@@ -80,7 +80,7 @@
                 <div class="boxfoot"></div>
             </div>
             <div class="boxall" style="height: 2.95rem">
-                <div class="alltitle">行业区分比例</div>
+                <div class="alltitle">最受顾客欢迎的民宿Top 5</div>
                 <div id="echarts4" style="height: 2.2rem; width: 100%;"></div>
                 <div class="boxfoot"></div>
             </div>
@@ -663,9 +663,6 @@
     }, {
         name: '文学',
         value: '92'
-    }, {
-        name: '服装',
-        value: '87'
     }];
     var datalist = [{
         offset: [56, 48],
@@ -691,12 +688,7 @@
         offset: [26, 19],
         symbolSize: 65,
         color: 'rgba(73,188,247,.14)'
-    }, {
-        offset: [75, 75],
-        symbolSize: 60,
-        color: 'rgba(73,188,247,.14)'
-
-    }];
+    }, ];
 
     var datas = [];
     for (var i = 0; i < plantCap.length; i++) {
