--- a/ruoyi-admin/src/main/resources/templates/system/buyroom/infopage.html
+++ b/ruoyi-admin/src/main/resources/templates/system/buyroom/infopage.html
@@ -45,7 +45,8 @@
         <div class="form-group">
             <label class="col-sm-3 control-label " style="color: white">入住日期：</label>
             <div class="col-sm-5">
-                <input type="datetime-local" class="form-control"  placeholder="请选择预计入住时间" name="checkInDate" id="checkInDate"  required max="2023-12-31 23:59" value="2023-01-01 00:00"/>
+                <input type="datetime-local" class="form-control date-picker"  placeholder="请选择预计入住时间" name="checkInDate" id="checkInDate"  required max="2023-12-31 23:59" />
+<!--                <input type="text" class="time-input"  placeholder="请选择预计入住时间" name="checkInDate" id="checkInDate"  required max="2023-12-31" >-->
             </div>
         </div>
         <div class="form-group">
@@ -84,6 +85,19 @@
 
 <th:block th:include="include :: footer" />
 <th:block th:include="include :: summernote-js" />
+
+<script type="text/javascript">
+    var date=new Date();
+    var mon=date.getMonth()+1; if(mon<10)mon="0"+mon;
+    var dat=date.getDate(); if(dat<10)dat="0"+dat;
+    var hou=date.getHours(); if(hou<10)hou="0"+hou;
+    var min=date.getMinutes(); if(min<10)min="0"+min;
+    var str=date.getFullYear()+"-"+mon+"-"+dat+" "+hou+":"+min;
+    console.log(str);
+    document.getElementById("checkInDate").value=str;
+</script>
+
+
 <script th:inline="javascript" >
     console.log("进入infopage的js");
 
