初步完成驾驶舱页面

--- a/ruoyi-admin/src/main/resources/templates/data/data.html
+++ b/ruoyi-admin/src/main/resources/templates/data/data.html
@@ -52,6 +52,7 @@
 <div class="mainbox">
     <ul class="clearfix">
         <li>
+
             <div class="boxall" style="height: 2.7rem">
                 <div class="alltitle">生意参谋</div>
 
@@ -68,10 +69,30 @@
                         <li><h2>19%</h2><span>环比增长</span></li>
                     </ul>
 
+                </div>
+                <div class="boxfoot"></div>
+            </div>
+
+            <div class="boxall" style="height: 2.7rem">
+                <div class="alltitle">生意参谋</div>
+
+                <div class="sycm">
+                    <ul class="clearfix">
+                        <li><h2>1824</h2><span>今日销售额</span></li>
+                        <li><h2>1920</h2><span>昨日销售额</span></li>
+                        <li><h2>19%</h2><span>环比增长</span></li>
+                    </ul>
+                    <div style="border-bottom: 1px solid rgba(255,255,255,.1)"></div>
+                    <ul class="clearfix">
+                        <li><h2>1824</h2><span>今日销售额</span></li>
+                        <li><h2>1920</h2><span>昨日销售额</span></li>
+                        <li><h2>19%</h2><span>环比增长</span></li>
+                    </ul>
 
                 </div>
                 <div class="boxfoot"></div>
             </div>
+
             <div class="boxall" style="height: 2.65rem">
                 <div class="alltitle">消费占比</div>
                 <div class="sy" id="echarts1"></div>
@@ -79,11 +100,13 @@
                 <div class="sy" id="echarts3"></div>
                 <div class="boxfoot"></div>
             </div>
+
             <div class="boxall" style="height: 2.95rem">
                 <div class="alltitle">行业区分比例</div>
                 <div id="echarts4" style="height: 2.2rem; width: 100%;"></div>
                 <div class="boxfoot"></div>
             </div>
+
             <div class="boxall" style="height: 2.65rem" hidden>
                 <div class="alltitle">消费占比</div>
                 <div class="sy" id="echarts4"></div>
@@ -91,6 +114,7 @@
                 <div class="sy" id="echarts6"></div>
                 <div class="boxfoot"></div>
             </div>
+
             <div class="boxall" style="height: 2.65rem"><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&!-->
                 <div class="alltitle">订单种类比例</div>
                 <div class="sy" id="pch1"></div>
@@ -98,6 +122,7 @@
                 <div class="sy" id="pch3"></div>
                 <div class="boxfoot"></div>
             </div><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&!-->
+
             <div class="boxall" style="height: 3.4rem">
                 <div class="alltitle">实时消费记录</div>
                 <div class="wrap">
@@ -124,6 +149,7 @@
                 </div>
                 <div class="boxfoot"></div>
             </div>
+
         </li>
 
 
@@ -197,9 +223,8 @@
                 </div>
             </div>
 
-
-
         </li>
+
         <li>
             <div class="boxall" style="height:5.2rem">
                 <div class="alltitle">新增会员信息</div>
@@ -231,6 +256,7 @@
 
             <div class="boxall" style="height:260px;">
                 <div class="alltitle">标题样式</div>
+
                 <div class="navboxall">
                     <div class="wraptit">
                         <span>单号</span><span>金额</span><span>品名</span><span>时间</span>
@@ -301,6 +327,7 @@
                     </div>
 
                 </div>
+
                 <div class="boxall" style="height:300px"><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&pch!-->
                     <div class="alltitle">民宿订单统计</div>
                     <div class="navboxall">
