--- a/ruoyi-admin/src/main/resources/templates/yk/top_landlord/top_landlord.html
+++ b/ruoyi-admin/src/main/resources/templates/yk/top_landlord/top_landlord.html
@@ -137,9 +137,11 @@
     function printHtml() {
         $("#prints").removeClass("noprint");
         $.table.hideColumn('image');
+        $.table.hideColumn('caozuo');
         window.print();
         $("#option").addClass("noprint");
         $.table.showColumn('image');
+        $.table.showColumn('caozuo');
     }
 </script>
 </body>
