--- a/ruoyi-admin/src/main/resources/templates/system/menu/menu.html
+++ b/ruoyi-admin/src/main/resources/templates/system/menu/menu.html
@@ -61,7 +61,7 @@
 				<a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="system:menu:export">
 					<i class="fa fa-download"></i> 导出
 				</a>
-				<a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="system:top_landlord:print">
+				<a class="btn btn-success" onclick="printHtml()" shiro:hasPermission="system:top_landlord:print">
 					<i class="fa fa-plus"></i> 打印
 				</a>
 	        </div>
@@ -170,14 +170,12 @@
 		        {
 		            title: '操作',
 					field: 'caozuo',
-		            width: '20',
-		            widthUnit: '%',
 		            align: "left",
 		            formatter: function(value, row, index) {
 		                var actions = [];
-		                actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.menuId + '\')"><i class="fa fa-edit"></i>编辑</a> ');
-		                actions.push('<a class="btn btn-info btn-xs ' + addFlag + '" href="javascript:void(0)" onclick="$.operate.add(\'' + row.menuId + '\')"><i class="fa fa-plus"></i>新增</a> ');
-		                actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.menuId + '\')"><i class="fa fa-trash"></i>删除</a>');
+		                actions.push('<a class="btn btn-success btn-xs' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.menuId + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+		                actions.push('<a class="btn btn-info btn-xs' + addFlag + '" href="javascript:void(0)" onclick="$.operate.add(\'' + row.menuId + '\')"><i class="fa fa-plus"></i>新增</a> ');
+		                actions.push('<a class="btn btn-danger btn-xs' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.menuId + '\')"><i class="fa fa-trash"></i>删除</a>');
 		                return actions.join('');
 		            }
 		        }]
@@ -186,13 +184,11 @@
 		});
 
 	function printHtml() {
-		$.table.hideColumn("caozuo");
-		// $("#expandAllBtn").click();
-		$("#prints").removeClass("noprint");
-		window.print();
-		$("#prints").addClass("noprint");
-		// $("#expandAllBtn").click();
-		$.table.showColumn("caozuo");
+	$("#expandAllBtn").click();
+	$("#prints").removeClass("noprint");
+	window.print();
+	$("#prints").addClass("noprint");
+	$("#expandAllBtn").click();
 	}
 	</script>
 
