--- a/ruoyi-admin/src/main/resources/templates/data/data/data.html
+++ b/ruoyi-admin/src/main/resources/templates/data/data/data.html
@@ -73,10 +73,12 @@
                 <div class="boxfoot"></div>
             </div>
             <div class="boxall" style="height: 2.65rem">
-                <div class="alltitle">消费占比</div>
-                <div class="sy" id="echarts1"></div>
-                <div class="sy" id="echarts2"></div>
-                <div class="sy" id="echarts3"></div>
+                <div class="alltitle">本月截至今天风向情况</div>
+                <div class="clearfix">
+                    <div class="sy" id="lrc11"></div>
+                    <div class="sy" id="lrc12"></div>
+                    <div class="sy" id="lrc13"></div>
+                </div>
                 <div class="boxfoot"></div>
             </div>
             <div class="boxall" style="height: 2.95rem">
@@ -86,9 +88,9 @@
             </div>
             <div class="boxall" style="height: 2.65rem" hidden>
                 <div class="alltitle">消费占比</div>
-                <div class="sy" id="echarts4"></div>
-                <div class="sy" id="echarts5"></div>
-                <div class="sy" id="echarts6"></div>
+                <div class="sy" id="echarts1"></div>
+                <div class="sy" id="echarts2"></div>
+                <div class="sy" id="echarts3"></div>
                 <div class="boxfoot"></div>
             </div>
             <div class="boxall" style="height: 2.65rem"><!--&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&!-->
@@ -228,6 +230,15 @@
                 </div>
                 <div class="boxfoot"></div>
             </div>
+            <div class="boxall" style="height:3.2rem">
+                <div class="alltitle">账号角色信息</div>
+                <div class="clearfix">
+                    <div class="sy" id="lrc21"></div>
+                    <div class="sy" id="lrc22"></div>
+                    <div class="sy" id="lrc23"></div>
+                </div>
+                <div class="boxfoot"></div>
+            </div>
 
             <div class="boxall" style="height:260px;">
                 <div class="alltitle">标题样式</div>
@@ -337,6 +348,12 @@
         myChart6.resize();
         myChart7.resize();
         myChart8.resize();
+        lrc11.resize();
+        lrc12.resize();
+        lrc13.resize();
+        lrc21.resize();
+        lrc22.resize();
+        lrc23.resize();
     })
     window.addEventListener("resize", function () {
         myChart1.resize();
@@ -345,7 +362,357 @@
         myChart6.resize();
         myChart7.resize();
         myChart8.resize();
+        lrc11.resize();
+        lrc12.resize();
+        lrc13.resize();
+        lrc21.resize();
+        lrc22.resize();
+        lrc23.resize();
     });
+</script>
+<script type="text/javascript" id="lrc">
+    var lrc11 = echarts.init(document.getElementById('lrc11'));
+    var lrc12 = echarts.init(document.getElementById('lrc12'));
+    var lrc13 = echarts.init(document.getElementById('lrc13'));
+    var lrc21 = echarts.init(document.getElementById('lrc21'));
+    var lrc22 = echarts.init(document.getElementById('lrc22'));
+    var lrc23 = echarts.init(document.getElementById('lrc23'));
+    $.ajax({
+        type: 'post',
+        url: 'http://localhost/weather/weather/data',
+        async: false,
+        success: function (res) {
+            console.log('weather');
+            console.log(res);
+            var vv0=res[0];
+            var vv1=res[1];
+            var vv2=res[2];
+            var vvt=vv0+vv1+vv2;
+            var vv12=vv1+vv2;
+            var vv02=vv0+vv2;
+            var vv01=vv0+vv1;
+
+            lrcOp11={
+                series: [{
+
+                    type: 'pie',
+                    radius: ['70%', '80%'],
+                    color: '#0088cc',
+                    label: {
+                        normal: {
+                            position: 'center'
+                        }
+                    },
+                    data: [{
+                        value: vv0,
+                        name: '2级以下',
+                        label: {
+                            normal: {
+                                formatter: vv0 + '',
+                                textStyle: {
+                                    fontSize: 20,
+                                    color: '#fff',
+                                }
+                            }
+                        }
+                    }, {
+                        value: vv12,
+                        name: '2级以上',
+                        label: {
+                            normal: {
+                                formatter: function (params) {
+                                    return '2级及以下'
+                                },
+                                textStyle: {
+                                    color: '#aaa',
+                                    fontSize: 12
+                                }
+                            }
+                        },
+                        itemStyle: {
+                            normal: {
+                                color: 'rgba(255,255,255,.2)'
+                            },
+                            emphasis: {
+                                color: '#fff'
+                            }
+                        },
+                    }]
+                }]
+            };
+
+            lrcOp12={
+                series: [{
+                    type: 'pie',
+                    radius: ['70%', '80%'],
+                    color: '#62b62f',
+                    label: {
+                        normal: {
+                            position: 'center'
+                        }
+                    },
+                    data: [{
+                        value: vv1,
+                        name: '3~5级',
+                        label: {
+                            normal: {
+                                formatter: vv1 + '',
+                                textStyle: {
+                                    fontSize: 20,
+                                    color: '#fff',
+                                }
+                            }
+                        }
+                    }, {
+                        value: vv02,
+                        name: '除3~5级',
+                        label: {
+                            normal: {
+                                formatter: function (params) {
+                                    return '3~5级'
+                                },
+                                textStyle: {
+                                    color: '#aaa',
+                                    fontSize: 12
+                                }
+                            }
+                        },
+                        itemStyle: {
+                            normal: {
+                                color: 'rgba(255,255,255,.2)'
+                            },
+                            emphasis: {
+                                color: '#fff'
+                            }
+                        },
+                    }]
+                }]
+            };
+
+            lrcOp13={
+                series: [{
+                    type: 'pie',
+                    radius: ['70%', '80%'],
+                    color: '#fccb00',
+                    label: {
+                        normal: {
+                            position: 'center'
+                        }
+                    },
+                    data: [{
+                        value: vv2,
+                        name: '5级以上',
+                        label: {
+                            normal: {
+                                formatter: vv2 + '',
+                                textStyle: {
+                                    fontSize: 20,
+                                    color: '#fff',
+                                }
+                            }
+                        }
+                    }, {
+                        value: vv01,
+                        name: '5级以下',
+                        label: {
+                            normal: {
+                                formatter: function (params) {
+                                    return '5级以上'
+                                },
+                                textStyle: {
+                                    color: '#aaa',
+                                    fontSize: 12
+                                }
+                            }
+                        },
+                        itemStyle: {
+                            normal: {
+                                color: 'rgba(255,255,255,.2)'
+                            },
+                            emphasis: {
+                                color: '#fff'
+                            }
+                        },
+                    }]
+                }]
+            };
+            setTimeout(function () {
+                lrc11.setOption(lrcOp11);
+                lrc12.setOption(lrcOp12);
+                lrc13.setOption(lrcOp13);
+            }, 500);
+        }
+    });
+
+    $.ajax({
+        type: 'post',
+        url: 'http://localhost/system/role/statistics/count',
+        async: false,
+        success: function (res) {
+            console.log('weather');
+            console.log(res);
+            var vv0=res[0];
+            var vv1=res[1];
+            var vv2=res[2];
+            var vvt=vv0+vv1+vv2;
+            var vv12=vv1+vv2;
+            var vv02=vv0+vv2;
+            var vv01=vv0+vv1;
+
+            lrcOp21 = {
+                series: [{
+                    type: 'pie',
+                    radius: ['70%', '80%'],
+                    color: '#0088cc',
+                    label: {
+                        normal: {
+                            position: 'center'
+                        }
+                    },
+                    data: [{
+                        value: vv0,
+                        name: '管理员数',
+                        label: {
+                            normal: {
+                                formatter: vv0 + '',
+                                textStyle: {
+                                    fontSize: 20,
+                                    color: '#fff',
+                                }
+                            }
+                        }
+                    },
+                        {
+                            value: vv12,
+                            name: '非管理员',
+                            label: {
+                                normal: {
+                                    formatter: function (params) {
+                                        return '管理员数'
+                                    },
+                                    textStyle: {
+                                        color: '#aaa',
+                                        fontSize: 12
+                                    }
+                                }
+                            },
+                            itemStyle: {
+                                normal: {
+                                    color: 'rgba(255,255,255,.2)'
+                                },
+                                emphasis: {
+                                    color: '#fff'
+                                }
+                            },
+                        }]
+                }]
+
+            };
+
+            lrcOp22 = {
+                series: [{
+                    type: 'pie',
+                    radius: ['70%', '80%'],
+                    color: '#fccb00',
+                    label: {
+                        normal: {
+                            position: 'center'
+                        }
+                    },
+                    data: [{
+                        value: vv1,
+                        name: '房东数',
+                        label: {
+                            normal: {
+                                formatter: vv1 + '',
+                                textStyle: {
+                                    fontSize: 20,
+                                    color: '#fff',
+                                }
+                            }
+                        }
+                    },
+                        {
+                            value: vv02,
+                            name: '非房东',
+                            label: {
+                                normal: {
+                                    formatter: function (params) {
+                                        return '房东数'
+                                    },
+                                    textStyle: {
+                                        color: '#aaa',
+                                        fontSize: 12
+                                    }
+                                }
+                            },
+                            itemStyle: {
+                                normal: {
+                                    color: 'rgba(255,255,255,.2)'
+                                },
+                                emphasis: {
+                                    color: '#fff'
+                                }
+                            },
+                        }]
+                }]
+            };
+            lrcOp23 = {
+                series: [{
+                    type: 'pie',
+                    radius: ['70%', '80%'],
+                    color: '#62b62f',
+                    label: {
+                        normal: {
+                            position: 'center'
+                        }
+                    },
+                    data: [{
+                        value: vv2,
+                        name: '顾客数',
+                        label: {
+                            normal: {
+                                formatter: vv2 + '',
+                                textStyle: {
+                                    fontSize: 20,
+                                    color: '#fff',
+                                }
+                            }
+                        }
+                    }, {
+                        value: vv01,
+                        name: '非顾客',
+                        label: {
+                            normal: {
+                                formatter: function (params) {
+                                    return '顾客数'
+                                },
+                                textStyle: {
+                                    color: '#aaa',
+                                    fontSize: 12
+                                }
+                            }
+                        },
+                        itemStyle: {
+                            normal: {
+                                color: 'rgba(255,255,255,.2)'
+                            },
+                            emphasis: {
+                                color: '#fff'
+                            }
+                        },
+                    }]
+                }]
+            };
+            setTimeout(function () {
+                lrc21.setOption(lrcOp21);
+                lrc22.setOption(lrcOp22);
+                lrc23.setOption(lrcOp23);
+            }, 500);
+        }
+    });
+
+
 </script>
 <script type="text/javascript">
     var v0 = 1000;
@@ -521,8 +888,6 @@
     var v2 = 523;
     var v3 = v1 + v2;
     option1 = {
-
-
         series: [{
             type: 'pie',
             radius: ['70%', '80%'],
@@ -801,6 +1166,7 @@
 <script type="text/javascript">
     $('.counter').countUp();
 </script>
+
 <script type="text/javascript" id="pch-script">
 
 
