--- a/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/clientorder.html
+++ b/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/clientorder.html
@@ -126,6 +126,7 @@
     var editFlag = [[${@permission.hasPermi('clientspecialtyorder:clientorder:edit')}]];
     var removeFlag = [[${@permission.hasPermi('clientspecialtyorder:clientorder:remove')}]];
     var querycommentsFlag = [[${@permission.hasPermi('clientspecialtyorder:clientorder:querycomment')}]];
+    var  queryallcommentsFlag = [[${@permission.hasPermi('clientspecialtyorder:clientorder:queryallcomment')}]];
     var printFlag = [[${@permission.hasPermi('clientspecialtyorder:clientorder:print')}]];
     var commentsFlag = [[${@permission.hasPermi('clientspecialtyorder:clientorder:comment')}]];
     var isReceivedDatas = [[${@dict.getType('sys_user_is_received')}]];
@@ -141,6 +142,7 @@
             // discussUrl:prefix + "/comment/{id}",
             discussUrl:prefix + "/comment",
             queryUrl:prefix+"/querycomment/{id}",
+            queryallUrl:prefix+"/queryallcomment/{id}",
             removeUrl: prefix + "/remove",
             exportUrl: prefix + "/export",
             modalName: "订单",
@@ -223,7 +225,8 @@
                     formatter: function(value, row, index) {
                         var actions = [];
                         actions.push('<a class="btn btn-success btn-xs ' + commentsFlag + '" href="javascript:void(0)" onclick="$.operate.comment(\'' + row.id + '\')"><i class="fa fa-edit"></i>评论</a> ');
-                        actions.push('<a class="btn btn-success btn-xs ' + querycommentsFlag + '" href="javascript:void(0)" onclick="$.operate.querycommentTab(\'' + row.id + '\')"><i class="fa fa-add"></i>查看评论</a>');
+                        actions.push('<a class="btn btn-success btn-xs ' + querycommentsFlag + '" href="javascript:void(0)" onclick="$.operate.querycommentTab(\'' + row.id + '\')"><i class="fa fa-add"></i>最新评论</a>');
+                        actions.push('<a class="btn btn-success btn-xs ' + queryallcommentsFlag + '" href="javascript:void(0)" onclick="$.operate.queryallcommentTab(\'' + row.id + '\')"><i class="fa fa-add"></i>查看评论</a>');
                         return actions.join('');
                     }
                 }]
