--- a/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/landlordorder.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/landlordorder.html
@@ -129,6 +129,7 @@
         var editFlag = [[${@permission.hasPermi('landlordhomeorder:landlordorder:edit')}]];
         var removeFlag = [[${@permission.hasPermi('landlordhomeorder:landlordorder:remove')}]];
         var querycommentsFlag = [[${@permission.hasPermi('landlordhomeorder:landlordorder:querycomment')}]];
+        var queryallcommentsFlag = [[${@permission.hasPermi('landlordhomeorder:landlordorder:queryallcomment')}]];
         var isPaidDatas = [[${@dict.getType('sys_user_is_paid')}]];
         var printFlag =[[${@permission.hasPermi('landlordhomeorder:landlordorder:print')}]];
         var isDoneDatas = [[${@dict.getType('sys_user_is_done')}]];
@@ -140,6 +141,7 @@
                 createUrl: prefix + "/add",
                 updateUrl: prefix + "/edit/{id}",
                 queryUrl:prefix+"/querycomment/{id}",
+                queryallUrl:prefix+"/queryallcomment/{id}",
                 removeUrl: prefix + "/remove",
                 exportUrl: prefix + "/export",
                 modalName: "民宿订单",
@@ -229,7 +231,8 @@
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-success btn-xs ' + querycommentsFlag + '" href="javascript:void(0)" onclick="$.operate.querycommentTab(\'' + row.id + '\')"><i class="fa fa-edit"></i>查看评价</a> ');
+                        actions.push('<a class="btn btn-success btn-xs ' + querycommentsFlag + '" href="javascript:void(0)" onclick="$.operate.querycommentTab(\'' + row.id + '\')"><i class="fa fa-edit"></i>最新评价</a> ');
+                        actions.push('<a class="btn btn-success btn-xs ' + queryallcommentsFlag + '" href="javascript:void(0)" onclick="$.operate.queryallcommentTab(\'' + row.id + '\')"><i class="fa fa-add"></i>查看评论</a>');
                         // actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
                         return actions.join('');
                     }
