民宿历史订单删除评论按钮，以及查看评论的调试语句，网络图片可以正常打开了

--- a/wx/pages/history/room/comment/cmt_room.wxml
+++ b/wx/pages/history/room/comment/cmt_room.wxml
@@ -10,8 +10,7 @@
     </view>
     <view class='image'>
       <label>照片</label>
-      <!-- <image class='img' src="{{photo}}" mode="aspectFit"></image> -->
-      <image class='img' src="http://localhost/profile/1672669920136750.png" mode="aspectFit"></image>
+      <image class='img' src="{{photo}}" mode="aspectFit"></image>
     </view>
   </view>
 </view>
