个人中心修改框微调

--- a/ruoyi-admin/src/main/resources/templates/system/user/profile/profile.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/profile/profile.html
@@ -135,7 +135,7 @@
                         <option value="1">女</option>
                         <option value="2">其他</option>
                     </select>
-                    <label for="input-user-province" class="col-sm-2 control-label">所在省份</label>
+                    <label for="input-user-province" class="control-label">所在省份</label>
                     <input type="text" class="form-control" id="input-user-province" name="province" placeholder="请输入所在省份" value="">
 
                 </form>
