驾驶舱改措辞风向为风力

--- a/ruoyi-admin/src/main/resources/templates/data/data/data.html
+++ b/ruoyi-admin/src/main/resources/templates/data/data/data.html
@@ -73,7 +73,7 @@
                 <div class="boxfoot"></div>
             </div>
             <div class="boxall" style="height: 2.65rem">
-                <div class="alltitle">本月截至今天风向情况</div>
+                <div class="alltitle">本月截至今天风力情况</div>
                 <div class="clearfix">
                     <div class="sy" id="lrc11"></div>
                     <div class="sy" id="lrc12"></div>
